# swagger.json
@@ -156,6 +156,68 @@
         }
       }
     },
+    "/vehicles/add": {
+      "post": {
+        "tags": ["Vehicles"],
+        "summary": "Thêm xe mới vào hệ thống",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "soKhung",
+                  "soMay",
+                  "dongXeId",
+                  "mauSac",
+                  "namSanXuat"
+                ],
+                "properties": {
+                  "soKhung": {
+                    "type": "string",
+                    "example": "VIS002"
+                  },
+                  "soMay": {
+                    "type": "string",
+                    "example": "VM002"
+                  },
+                  "dongXeId": {
+                    "type": "string",
+                    "example": "6a1c406192cc8d5a1134aa23",
+                    "description": "ID của dòng xe (MongoDB ObjectId)"
+                  },
+                  "mauSac": {
+                    "type": "string",
+                    "example": "Đen bóng"
+                  },
+                  "namSanXuat": {
+                    "type": "integer",
+                    "example": 2026
+                  },
+                  "trangThaiXe": {
+                    "type": "string",
+                    "example": "ConHang",
+                    "default": "ConHang"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Add vehicle successfully"
+          },
+          "400": {
+            "description": "Missing required fields or soKhung/soMay already exists"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/auth/sign-in": {
       "post": {
         "tags": ["Auth"],
